force-app/main/default/objects/Sold_Loan_Pool__c/fields/Data_Tape_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_Tape_Sent_Date__c</fullName>
    <description>Date that the Data Tape was sent to the Capital Partner</description>
    <inlineHelpText>Date that the Data Tape was sent to the Capital Partner</inlineHelpText>
    <label>Data Tape Sent Date</label>
    <type>Date</type>
</CustomField>