force-app/main/default/objects/Sold_Loan_Pool__c/fields/Interest_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Interest_Adjustment__c</fullName>
    <label>Interest Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>