force-app/main/default/objects/Sold_Loan_Pool__c/fields/Purchased_Price__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Price__c</fullName>
    <description>The price this individual Loan or Loan Pool was sold for</description>
    <inlineHelpText>The price this individual Loan or Loan Pool was sold for</inlineHelpText>
    <label>Purchased Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>