force-app/main/default/objects/Sold_Loan_Pool__c/fields/Purchaser_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_Interest_Rate__c</fullName>
    <label>Purchaser Interest Rate</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>