force-app/main/default/objects/Sold_Loan_Pool__c/fields/Seller__c.field-meta.xml
<CustomField>
    <fullName>Seller__c</fullName>
    <label>Seller</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CoreVest Purchaser 2, LLC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>