force-app/main/default/objects/Sold_Loan_Pool__c/fields/Servicer__c.field-meta.xml
<CustomField>
    <fullName>Servicer__c</fullName>
    <label>Servicer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Servicer_Name</valueSetName>
    </valueSet>
</CustomField>