force-app/main/default/objects/Sold_Loan_Pool__c/fields/Servicing_Status__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Status__c</fullName>
    <description>Indicates if CoreVest will continue servicing these Loans</description>
    <inlineHelpText>Indicates if CoreVest will continue servicing these Loans</inlineHelpText>
    <label>Servicing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Servicing Retained</fullName>
            </value>
            <value>
                <fullName>Servicing Released</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>